--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-gino==1.0.1
-gino-sanic==0.1.0
 marshmallow==3.7.1
 PyJWT==1.7.1
 python-dotenv==0.14.0
 sanic==20.6.3
 bcrypt==3.2.0
+aiopg==1.0.0
+peewee-async==0.7.0
